Implemented the first integration test for PqaCore DLL.

--- a/ProbQA/PqaCoreTests/PqaCoreTests.vcxproj
+++ b/ProbQA/PqaCoreTests/PqaCoreTests.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DichotomyTest.cpp" />
     <ClCompile Include="PqaCoreTestsMain.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
