--- a/ProbQA/PqaCoreTests/PqaCoreTests.vcxproj.filters
+++ b/ProbQA/PqaCoreTests/PqaCoreTests.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="PqaCoreTestsMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DichotomyTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
