Fixed more bugs found while debugging.

--- a/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj.filters
+++ b/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="SRHeapTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SRBucketSummatorTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
