--- a/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj
+++ b/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj
@@ -198,6 +198,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SRBitArrayTest.cpp" />
+    <ClCompile Include="SRBucketSummatorTest.cpp" />
     <ClCompile Include="SRHeapTest.cpp" />
     <ClCompile Include="SRPlatformTestsMain.cpp" />
     <ClCompile Include="SRVectMathTest.cpp" />
