--- a/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj.filters
+++ b/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="SRBucketSummatorTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SRQueueTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
