Replaced bucket summation with Kahan summation in the bottleneck loop - CEEvalQsSubtaskConsider::Run() . At least for target count less than 32K on 16-core CPUs this should be faster.

--- a/ProbQA/SRPlatform/SRPlatform.vcxproj
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj
@@ -222,6 +222,7 @@
     <ClInclude Include="Interface\Exceptions\SRStdException.h" />
     <ClInclude Include="Interface\ISRLogCustomizable.h" />
     <ClInclude Include="Interface\SRAccumulator.h" />
+    <ClInclude Include="Interface\SRAccumVectDbl.h" />
     <ClInclude Include="Interface\SRAlignedAllocator.h" />
     <ClInclude Include="Interface\SRAlignedDeleter.h" />
     <ClInclude Include="Interface\SRBasicTypes.h" />
