--- a/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
@@ -299,6 +299,9 @@
     <ClCompile Include="SRVectMath.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SRFastRandom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <MASM Include="SRFlushCache.asm">
