Separated sandbox file in PqaClient, and moved sandbox stuff there. Changed PqaClient to run trainings and output precision data to a file.

--- a/ProbQA/PqaClient/PqaClient.vcxproj.filters
+++ b/ProbQA/PqaClient/PqaClient.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="PqaClient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Sandbox1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
