--- a/ProbQA/PqaClient/PqaClient.vcxproj
+++ b/ProbQA/PqaClient/PqaClient.vcxproj
@@ -199,6 +199,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PqaClient.cpp" />
+    <ClCompile Include="Sandbox1.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
