Include (squares of) Euclidian distances between prior and posterior probabilities in the priority function.

--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -260,6 +260,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="CETrainTaskNumSpec.h" />
+    <ClInclude Include="AnswerMetrics.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseCpuEngine.cpp" />
