Fixed double-free bug for quizzes. Changed the priority function to pow(Distance,12) / pow(ExpectedTargets, 6). Added a test for SRAccumVectDbl256's part for getting the result.

--- a/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj
+++ b/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj
@@ -197,6 +197,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="SRAccumulatorTest.cpp" />
     <ClCompile Include="SRBitArrayTest.cpp" />
     <ClCompile Include="SRBucketSummatorTest.cpp" />
     <ClCompile Include="SRHeapTest.cpp" />
