--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -260,6 +260,7 @@
     <ClInclude Include="RatingsHeap.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Summator.h" />
+    <ClInclude Include="TargetRowPersistence.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="CETrainTaskNumSpec.h" />
     <ClInclude Include="AnswerMetrics.h" />
