--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -240,6 +240,9 @@
     <ClInclude Include="KBFileInfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TargetRowPersistence.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
