--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -247,6 +247,7 @@
     <ClInclude Include="GapTracker.h" />
     <ClInclude Include="Interface\IPqaEngine.h" />
     <ClInclude Include="Interface\IPqaEngineFactory.h" />
+    <ClInclude Include="Interface\PqaCInterop.h" />
     <ClInclude Include="Interface\PqaCommon.h" />
     <ClInclude Include="Interface\PqaCore.h" />
     <ClInclude Include="Interface\PqaErrorParams.h" />
@@ -280,6 +281,7 @@
     <ClCompile Include="CETrainOperation.cpp" />
     <ClCompile Include="CETrainSubtaskAdd.cpp" />
     <ClCompile Include="CEUpdatePriorsSubtaskMul.cpp" />
+    <ClCompile Include="PqaCInterop.cpp" />
     <ClCompile Include="CpuEngine.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
