--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -246,6 +246,9 @@
     <ClInclude Include="PermanentIdManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Interface\PqaCInterop.h">
+      <Filter>Header Files\Interface</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -318,6 +321,9 @@
       <Filter>Source Files\CPU Engine</Filter>
     </ClCompile>
     <ClCompile Include="PermanentIdManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PqaCInterop.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
